2008-07-03  Martin Lambers <marlam@marlam.de>

	* src/dataset_selector.h, src/dataset_selector.cpp, src/cvlview.cpp:
	Add a SpinBox that allows to jump to specific data sets.
	* src/dataset_selector.cpp: Fix.
	* src/frame_info.h, src/frame_info.cpp, src/dataset_selector.h,
	src/dataset_selector.cpp, src/cvlview.cpp, src/cvlview.qrc,
	src/Makefile.am: Move data set display from frame info to data set
	selector. Remove prev/next buttons because the SpinBox can do the
	same.
	* src/range_selector.cpp: Improve heuristics for default upper/lower
	bounds.
	* src/cvlview.cpp: Use the current view by default for the Save and
	Copy actions.
	* src/cvlview.h, src/cvlview.cpp, src/dataset_selector.h: Add the
	capability to save videos to multi-frame PPM files.
	* NEWS: Update.

2008-07-02  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Clear the color buffer on initialization and on
	certain errors.
	* TODO: Update.

2008-07-01  Martin Lambers <marlam@marlam.de>

	* gllib/glvm.h: Add cbrt() functions.
	* gllib/glvm-color.h: Add CIE L*a*b* color space.
	* gllib/glvm.h: Small improvements and a bugfix.

2008-06-30  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Normalize rotation quaternion to guarantee that
	it represents a rotation.
	* gllib/glvm.h: Improvements.
	* gllib/glvm-color.h, Makefile.am: New GLVM module for color space
	conversions.
	* src/view_area.cpp: Use glvm-color module.
	* src/view_area.cpp: Print luminance information in pixel info area
	also for formats like RGBA, RGBZ, and others.
	* TODO: Update.
	* src/heightmap_selector.h, src/heightmap_selector.cpp,
	src/heightmap_quads_vs.glsl, src/heightmap_strip_vs.glsl,
	src/view_area.cpp: Always use selected range as height data. Apply
	gamma correction to height data.
	* src/heightmap_selector.cpp: Improve height factor selection.

2008-06-26  Martin Lambers <marlam@marlam.de>

	* gllib/Makefile.am, gllib/glvm.h, gllib/glvm-gl.h, gllib/arcball.h,