@@ -1,3 +1,8 @@
+2008-07-04  Martin Lambers <marlam@marlam.de>
+
+	* src/cvlview.cpp, src/dataset_selector.h: Show progress bar when
+	saving a video, and allow to cancel the operation.
+
 2008-07-03  Martin Lambers <marlam@marlam.de>
 
 	* src/dataset_selector.h, src/dataset_selector.cpp, src/cvlview.cpp:
